GRAD2-3283 - Apply client authentication to GRAD-TRAX-API (#458)
* GRAD2-3283 - Apply client authentication to GRAD-TRAX-API

* Revert "GRAD2-3283 - Apply client authentication to GRAD-TRAX-API"

This reverts commit 6cdbb4508891c9873597713041efe2f39d1d05f2.

* Revert "Revert "GRAD2-3283 - Apply client authentication to GRAD-TRAX-API""

This reverts commit d9d1eaf2d0f832d5f4e1b021fb3a37985a4d1e3c.

* GRAD2-3283 - Apply client authentication to GRAD-TRAX-API

* GRAD2-3283 - Apply client authentication to GRAD-TRAX-API

* GRAD2-3283 - Apply client authentication to GRAD-TRAX-API

* GRAD2-3283 - Updating actions to use the latest tag for configmap script