@@ -27,23 +27,29 @@ import java.util.stream.Collectors;
 @Service("instituteDistrictService")
 public class DistrictService {
 
-    @Autowired
-    private EducGradTraxApiConstants constants;
-    @Autowired
-    @Qualifier("instituteWebClient")
-    private WebClient webClient;
-    @Autowired
+    private final EducGradTraxApiConstants constants;
+    private final WebClient webClient;
     DistrictRedisRepository districtRedisRepository;
-    @Autowired
     DistrictTransformer districtTransformer;
-    @Autowired
     ServiceHelper<DistrictService> serviceHelper;
-    @Autowired
     SchoolService schoolService;
-    @Autowired
     RESTService restService;
-    @Autowired
     CacheService cacheService;
+
+    @Autowired
+    public DistrictService(EducGradTraxApiConstants constants, @Qualifier("gradInstituteApiClient") WebClient webClient,
+                           DistrictRedisRepository districtRedisRepository, DistrictTransformer districtTransformer,
+                           ServiceHelper<DistrictService> serviceHelper, SchoolService schoolService,
+                           RESTService restService, CacheService cacheService) {
+        this.constants = constants;
+        this.webClient = webClient;
+        this.districtRedisRepository = districtRedisRepository;
+        this.districtTransformer = districtTransformer;
+        this.serviceHelper = serviceHelper;
+        this.schoolService = schoolService;
+        this.restService = restService;
+        this.cacheService = cacheService;
+    }
 
     public List<District> getDistrictsFromInstituteApi() {
         try {
@@ -150,7 +156,7 @@ public class DistrictService {
             List<String> districtIds = schoolDetails.stream()
                     .map(schoolDetail -> schoolDetail.getDistrictId())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
             for (String districtId : districtIds) {
                 districts.add(getDistrictByIdFromRedisCache(districtId));
             }
